--- a/.classpath
+++ b/.classpath
@@ -1,27 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="libs/commons-codec-1.15.jar"/>
-	<classpathentry kind="lib" path="libs/commons-collections4-4.4.jar"/>
-	<classpathentry kind="lib" path="libs/poi-5.2.2.jar"/>
-	<classpathentry kind="lib" path="libs/poi-ooxml-5.2.2.jar"/>
-	<classpathentry kind="lib" path="libs/xmlbeans-5.0.3.jar"/>
 	<classpathentry kind="lib" path="libs/jsoup-1.15.3.jar"/>
-	<classpathentry kind="lib" path="libs/commons-io-2.11.0.jar"/>
-	<classpathentry kind="lib" path="libs/commons-logging-1.2.jar"/>
-	<classpathentry kind="lib" path="libs/commons-compress-1.21.jar"/>
-	<classpathentry kind="lib" path="libs/log4j-api-2.17.2.jar"/>
-	<classpathentry kind="lib" path="libs/slf4j-api-1.7.36.jar"/>
-	<classpathentry kind="lib" path="libs/poi-ooxml-lite-5.2.2.jar"/>
-	<classpathentry kind="lib" path="libs/log4j-core-2.17.1.jar"/>
 	<classpathentry kind="lib" path="libs/opencsv-5.6.jar"/>
 	<classpathentry kind="lib" path="libs/mysql-connector-java-8.0.29.jar"/>
-	<classpathentry kind="lib" path="libs/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="libs/commons-net-3.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
