--- a/.classpath
+++ b/.classpath
@@ -10,7 +10,8 @@
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="lib" path="libs/jsoup-1.15.3.jar"/>
 	<classpathentry kind="lib" path="libs/opencsv-5.6.jar"/>
-	<classpathentry kind="lib" path="libs/mysql-connector-java-8.0.29.jar"/>
-	<classpathentry kind="lib" path="libs/commons-net-3.6.jar"/>
+	<classpathentry kind="lib" path="libs/commons-net-3.6.jar" sourcepath="C:/Users/NGUYEN VAN HAU/.m2/repository/commons-net/commons-net/3.6/commons-net-3.6-sources.jar"/>
+	<classpathentry kind="lib" path="libs/c3p0-0.9.1.2.jar"/>
+	<classpathentry kind="lib" path="libs/mysql-connector-java-8.0.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
