--- a/bin/config.properties
+++ b/bin/config.properties
@@ -1,20 +1,45 @@
+URL_API=https://apinhom11-production.up.railway.app/
+DB_DRIVER=com.mysql.cj.jdbc.Driver
+URL=jdbc:mysql://
+DB_MIN_CONNECTIONS=2
+DB_MAX_CONNECTIONS=5
 DATABASEDW=datawarehouse
 DATABASEST=staging
 DATABASECT=controller
+MYSQLHOST=202.151.176.142:3306
+#202.151.176.142
 USER=root
-PASS=
-PATH=C:/Users/NGUYEN VAN HAU/Datawarehouse/KQXS/
+PASS=EHNksa58813
+#EHNksa58813
 HOUR=20
 MINUTE=0
 SECOND=0
 FTP=
 SOURCE_NAME=Xô\u0309 sô\u0301 minh ngo\u0323c
+# Thay doi config ca nhan ---
+PATH=C:/Users/NGUYEN VAN HAU/Datawarehouse/KQXS/
 CONTACT=Nguyê\u0303n V\u0103n Hâ\u0323u
+# ------ Thay doi config ca nhan
 ID_CONFIG=
-VITUAL_PATH=/Nhom11
-FTP_SERVER_ADDRESS = 10.51.0.47
+VITUAL_PATH=/Nhom11/KQXS
+FTP_SERVER_ADDRESS = ftpupload.net
 FTP_SERVER_PORT_NUMBER = 21
 FTP_TIMEOUT =40000
 BUFFER_SIZE =1048576
-FTP_USERNAME =Van_hau
-FTP_PASSWORD =
+FTP_USERNAME =epiz_32935312
+FTP_PASSWORD =d9qweV65bf3
+# SQL query
+LOAD_FILE_TO_STAGING=LOAD DATA LOCAL INFILE ? INTO TABLE ket_qua_xo_so FIELDS TERMINATED BY ',' ENCLOSED BY \'\"\' IGNORE 1 ROWS
+GETS_KQXS=select * from ket_qua_xo_so
+TRUNCATE_KQXS=truncate table ket_qua_xo_so
+CHECK_LOG_CONTAIN=select * from log where log.ID_Config=? and log.File_Name=?
+GET_LOG_STATUS_1=select ID,File_Name from log where status=?
+SAVE_LOG=insert into log(ID, ID_Config, File_Name,Time,Status,Contact) values(?,?,?,?,?,?)
+CHANGE_LOG_TO_2=update log set Status=? where ID=?
+GET_DATE=select id from date_dim WHERE date=?
+SAVE_DATA=insert into data(ID,Province,Area,Date,Award,Number_result,value,isDelete,Date_expire) values(?,?,?,?,?,?,?,?,?)
+GETS_AREA=select * from khu_vuc
+GET_AWARD=select * from giai WHERE Name_award=?
+GET_PROVINCE=select * from tinh_thanh where name=?
+
+
