--- a/bin/config.properties
+++ b/bin/config.properties
@@ -38,8 +38,27 @@ SAVE_LOG=insert into log(ID, ID_Config, File_Name,Time,Status,Contact) values(?,
 CHANGE_LOG_TO_2=update log set Status=? where ID=?
 GET_DATE=select id from date_dim WHERE date=?
 SAVE_DATA=insert into data(ID,Province,Area,Date,Award,Number_result,value,isDelete,Date_expire) values(?,?,?,?,?,?,?,?,?)
-GETS_AREA=select * from khu_vuc
-GET_AWARD=select * from giai WHERE Name_award=?
-GET_PROVINCE=select * from tinh_thanh where name=?
+GETS_AREA=select * from khu_vuc where area like ?
+GET_AWARD=select * from giai WHERE Name_award like ?
+GET_PROVINCE=select * from tinh_thanh where name like ?
+GET_ALL_AREA=select count(*) from khu_vuc
+GET_ALL_AWARD=select count(*) from giai
+GET_ALL_PROVINCE=select count(*) from tinh_thanh
+INSERT_AREA=insert into khu_vuc(id,area,date_update,date_expire) values (?,?,?,?)
+INSERT_AWARD=insert into giai(id,Name_award,date_update,date_expire) values (?,?,?,?)
+INSERT_PROVINCE=insert into tinh_thanh(id,name,date_update,date_expire) values(?,?,?,?)
+GET_ALL_AWARD=select * from giai 
+GET_ALL_AREA=select * from khu_vuc
+GET_ALL_PROVINCE=select * from tinh_thanh
+IMPORT_PROVINCE_TO_STAGING=INSERT INTO staging.tinh_thanh SELECT * FROM datawarehouse.tinh_thanh
+IMPORT_PROVINCE_TO_DATAWAREHOUSE=INSERT INTO datawarehouse.tinh_thanh SELECT * FROM staging.tinh_thanh where id=?
+IMPORT_AREA_TO_STAGING=INSERT INTO staging.khu_vuc SELECT * FROM datawarehouse.khu_vuc
+IMPORT_AREA_TO_DATAWAREHOUSE=INSERT INTO datawarehouse.khu_vuc SELECT * FROM staging.khu_vuc where id=?
+IMPORT_AWARD_TO_STAGING=INSERT INTO staging.giai SELECT * FROM datawarehouse.giai
+IMPORT_AWARD_TO_DATAWAREHOUSE=INSERT INTO datawarehouse.giai SELECT * FROM staging.giai where id=?
+TRUNCATE_PROVINCE_STAGING=truncate table tinh_thanh
+TRUNCATE_AREA_STAGING=truncate table khu_vuc
+TRUNCATE_AWARD_STAGING=truncate table giai
+
 
 
